<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="future">future</string>
    <string name="year">year</string>
    <string name="current_semester">current</string>
    <string name="number_semesters">number of semesters</string>
    <string name="planmade">planmade</string>
    <string name="type">type</string>
    <string name="app_name">Smart Advisor</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_mainactivity">mainactivity</string>
    <string name="Home">Home</string>
    <string name="Past">Past</string>
    <string name="Advisement">Advisement</string>
    <string name="Settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="comp108">Comp 108</string>
    <string name="comp110">Comp 110/L</string>
    <string name="comp122">Comp 122/L</string>
    <string name="comp182">Comp 182/L</string>
    <string name="comp282">Comp 282</string>
    <string name="comp222">Comp 222</string>
    <string name="comp256">Comp 256/L</string>
    <string name="comp333">Comp 333</string>
    <string name="comp380">Comp 380/L</string>
    <string name="comp322">Comp 322/L</string>
    <string name="comp310">Comp 310</string>
    <string name="comp490">Comp 490/L</string>
    <string name="comp491L">Comp 491L</string>
    <string name="senelect">Senior Elective</string>
    <string name="math102">Math 102</string>
    <string name="math104">Math 104</string>
    <string name="math150A">Math 150A</string>
    <string name="math150B">Math 150B</string>
    <string name="math262">Math 262</string>
    <string name="math341">Math 341</string>
    <string name="math482">Math 482</string>
    <string name="phil230">Phil 230</string>
    <string name="labscience">Lab Science</string>
    <string name="GE">General Education</string>
    <string name="title_activity_incoming_student">IncomingStudent</string>
    <string name="select_past_courses">Please select the courses you have already taken.</string>
    <string name="new_student">Are You a freshman or transfer student?</string>
    <string name="freshman">Freshman</string>
    <string name="transfer">Transfer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_next_semester">Please input the next semester.</string>
    <string name="fall">Fall </string>
    <string name="spring">Spring </string>
    <string name="no_classes">No Classes Yet</string>
    <string name="done_button">Done</string>

</resources>
