<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.smartadvisor.IncomingStudent$PlaceholderFragment"
    android:layout_alignParentTop="true">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_student"
        android:textSize="20dp"
        android:gravity="center"/>
   <RadioGroup
       android:id="@+id/student_group"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <RadioButton
           android:id="@+id/fresh_radio"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/freshman"/>
       <RadioButton
           android:id="@+id/trans_radio"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/transfer"/>
   </RadioGroup>
   <Button
       android:layout_alignParentTop="true"
       android:id="@+id/btnDisplay"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Next"
       android:layout_gravity="center"
       android:textSize="40dp"/>
    </LinearLayout>



</RelativeLayout>
