<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_next_semester"
        android:textSize="25dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <RadioGroup
        android:id="@+id/get_semester"
        android:layout_width="160dp"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/get_Fall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/fall"
            android:onClick="onSemesterRadioClicked"/>
        <RadioButton
            android:id="@+id/get_Spring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spring"
            android:textSize="25dp"
            android:onClick="onSemesterRadioClicked"/>
    </RadioGroup>
        <RadioGroup
            android:id="@+id/get_year"
            android:layout_width="160dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/curr_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:onClick="onYearRadioClicked"/>
            <RadioButton
                android:id="@+id/next_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:onClick="onYearRadioClicked"/>
        </RadioGroup>
        </LinearLayout>
    <Button
        android:id="@+id/next_semester_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:textSize="30dp"
        android:layout_gravity="center"/>
</LinearLayout>